Module restructure.